<resources>
    <string name="app_name">PipiceApp</string>
    <string name="ovdje_unesi_tekst">Ovdje unesi tekst</string>
    <string name="telefon">telefon</string>
    <string name="instar">instar</string>
    <string name="imetrgovine">imeTrgovine</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="buy">Buy</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="defaluttext">defalutText</string>
    <string name="firststore">firstStore</string>
    <string name="secondStore">secondStore</string>
    <string name="thirsStore">thirdStore</string>
    <string name="firstprice">firstPrice</string>
    <string name="secondprice">secondPrice</string>
    <string name="thirdprice">thirdPrice</string>
    <string name="hgspot">HGSpot</string>
    <string name="hg_spot">HG Spot:</string>
    <string name="instarr">Instar:</string>
    <string name="itemnumber">itemNumber</string>
    <string name="addd">Add</string>
    <string name="add_to_baskett">Add to basket</string>
    <string name="plus">+</string>
    <string name="ko_arica">Košarica</string>
    <string name="obri_i">Obriši</string>
    <string name="ekupi_cijena_hrk">Ekupi Cijena (HRK):</string>
    <string name="hgspot_cijena_hrk">HGSpot Cijena (HRK):</string>
    <string name="instar_cijena_hrk">Instar Cijena (HRK):</string>
    <string name="asd" />
    <string name="hgspots">HGSpot:</string>
    <string name="prvimobitel">prviMobitel</string>
    <string name="drugimobitel">drugiMobitel</string>
    <string name="trecimobitel">treciMobitel</string>
    <string name="cetvrtimobitel">cetvrtiMobitel</string>
    <string name="petimobitel">petiMobitel</string>
    <string name="ekupi">Ekupi:</string>
    <string name="insatr">Instar:</string>
    <string name="storename">storeName</string>
    <string name="telefon1">telefon1</string>
    <string name="telefon2">telefon2</string>
    <string name="telefon3">telefon3</string>
    <string name="telefon1cijena">telefon1cijena</string>
    <string name="ž">telefon2cijena</string>
    <string name="telefon2cijena">telefon2cijena</string>
    <string name="telefon4">telefon4</string>
    <string name="telefon5">telefon5</string>
    <string name="telefon3cijena">telefon3cijena</string>
    <string name="telefon4cinema">telefon4cinema</string>
    <string name="telefon5cijena">telefon5cijena</string>
    <string name="telefon4cijena">telefon4cijena</string>
    <string name="ukupno">ukupno</string>
</resources>