<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity2"
    android:orientation="vertical"
    android:weightSum="4">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.4">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ko_arica"
                android:layout_centerHorizontal="true"
                android:layout_margin="8sp"
                android:id="@+id/kosarica"
                android:textSize="25sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/emptyBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obri_i"
                tools:ignore="MissingConstraints"
                android:layout_alignParentEnd="true"
                android:layout_margin="8sp"
                android:textSize="20sp" />
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.2">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ekupiNaslov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ekupi"
                android:layout_margin="8sp"
                tools:ignore="HardcodedText"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/prviMobitelEkupi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ekupiNaslov"
                android:layout_marginStart="8sp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="8sp"
                android:layout_marginBottom="8sp"
                android:text="@string/prvimobitel" />
            <TextView
                android:id="@+id/drugiMobitelEkupi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drugimobitel"
                android:layout_below="@+id/prviMobitelEkupi"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/treciMobitelEkupi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trecimobitel"
                android:layout_below="@+id/drugiMobitelEkupi"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/cetvrtiMobitelEkupi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cetvrtimobitel"
                android:layout_below="@+id/treciMobitelEkupi"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/petiMobitelEkupi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petimobitel"
                android:layout_below="@+id/cetvrtiMobitelEkupi"
                android:layout_margin="6sp"/>
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.2">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/hgspotNaslov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hgspots"
                android:layout_margin="8sp"
                tools:ignore="HardcodedText"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/prviMobitelHgspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hgspotNaslov"
                android:layout_marginStart="8sp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="8sp"
                android:layout_marginBottom="8sp"
                android:text="@string/prvimobitel" />
            <TextView
                android:id="@+id/drugiMobitelHgspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drugimobitel"
                android:layout_below="@+id/prviMobitelHgspot"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/treciMobitelHgspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trecimobitel"
                android:layout_below="@+id/drugiMobitelHgspot"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/cetvrtiMobitelHgspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cetvrtimobitel"
                android:layout_below="@+id/treciMobitelHgspot"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/petiMobitelHgspot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petimobitel"
                android:layout_below="@+id/cetvrtiMobitelHgspot"
                android:layout_margin="6sp"/>
        </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.2">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/instarNaslov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insatr"
                android:layout_margin="8sp"
                tools:ignore="HardcodedText"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/prviMobitelInstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prvimobitel"
                android:layout_below="@+id/instarNaslov"
                android:layout_margin="8sp"/>
            <TextView
                android:id="@+id/drugiMobitelInstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drugimobitel"
                android:layout_below="@+id/prviMobitelInstar"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/treciMobitelInstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trecimobitel"
                android:layout_below="@+id/drugiMobitelInstar"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/cetvrtiMobitelInstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cetvrtimobitel"
                android:layout_below="@+id/treciMobitelInstar"
                android:layout_margin="6sp"/>
            <TextView
                android:id="@+id/petiMobitelInstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petimobitel"
                android:layout_below="@+id/cetvrtiMobitelInstar"
                android:layout_margin="6sp"/>
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>