<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/s21"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/phoneNameBasket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefon"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/priceEkupii"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ekupi_cijena_hrk"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/priceHgspott"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hgspot_cijena_hrk"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/priceInstarr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instar_cijena_hrk"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/phoneNameBaskett"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asd"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/priceEkupi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefon"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/priceHgspot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefon"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/priceInstar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefon"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>